# notify

./: .gitignore  README.md  requirements.txt  setup.cfg
api/discord/: __init__.py  discord.py  test.py  test2.py
api/gmail/: __init__.py  gmail.py  send_gmail_on_update.py
api/telegram/: test.py
notify/gmail/: gmail2.py
notify/telegram/: __init__.py  telegram.py
obsolete/notify/gmail/: gmail_more_secure.py
src/notify/: __init__.py  gmail.py
trigger/btc_whale/: 3rd_whale.py  history.yaml  main.py  whale_trigger.sh
trigger/uscis/: alert.py  checkUSCIS.py  history.yaml  main.py  uscis_trigger.sh
