[metadata]
name = notify
version = 0.1.0
author = utilmon
author_email = utilmonn@gmail.com
description = Various notification/alert projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/utilmon/notify
project_urls =
    Bug Tracker = https://github.com/utilmon/notify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src